k8s/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask
  namespace: haas
  labels:
    app: flask
spec:
  selector:
    app: flask
  ports:
    - name: http
      port: 80
      targetPort: 5000
